--- a/src/style/demo.css
+++ b/src/style/demo.css
@@ -13,6 +13,8 @@
         display: block;
         margin-bottom: 22px;
         margin-left: 20px;
+        transition: all 0.5s;
+
         @e title {
             position: relative;
             font-size: 14px;
@@ -57,8 +59,10 @@
             padding: 8px 0px 20px;
         }
         @e code {
+            position: relative;
             margin: 0px -24px;
             border-top: 1px solid #e1e6ec;
+            transition: all 0.5s;
             .iconLine {
                 position: relative;
                 text-align: center;
@@ -70,8 +74,8 @@
                     -webkit-transform: rotate(180deg);
                     -o-transform: rotate(180deg);
                     -moz-transform: rotate(180deg);
-                    color: #e31436;
-                    border: 1px solid #e31436;
+                    color: #00c4c0;
+                    border: 1px solid #00c4c0;
                 }
             }
             .iconOuter {
@@ -89,10 +93,17 @@
                 -o-transition: transform 0.5s;
                 -moz-transition: transform 0.5s;
             }
+            
             .code_display {
                 padding: 5px 20px;
                 font-size: 13px;
             }
+        }
+        @e code-copy {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            z-index: 1;
         }
     }
 }
